# TechnicalAnalysisIndicators

./: .gitignore  README.md  pyproject.toml
technical_analysis_automation/: __init__.py  directional_change.py  flags_pennants.py  harmonic_patterns.py  head_shoulders.py  mp_support_resist.py  perceptually_important.py  pip_pattern_miner.py  retracement_ratios.py  rolling_window.py  swing_chart_candle_plotter.py  swing_chart_rolling_window.py  swing_chart_rolling_window_functional_refactor.py  test_flag_patterns.py  test_hs_patterns.py  trendline_automation.py  wf_pip_miner.py
tests/: test__swing_chart_candle_plotter.py
