[tool.poetry]
name = "technical-analysis-automation"
version = "0.1.0"
description = ""
authors = ["Luke Taranto <luke.taranto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
mpld3 = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
